# IMT_Poker_ML

./: .gitignore  README.md  pyproject.toml
Poker_Finie/Code/: CréationBaseDonnee.py  Encoding.py  deals_encoded.csv  equity_results.csv  poker_winrates.csv
Poker_Finie/Code/CSV/: poker_winrates(Monte_carlo=100).csv
Poker_Finie/Code/CSV/Data/: poker_winrates(Monte_Carlo=1000).csv  poker_winrates(Monte_Carlo=10000).csv
Poker_Finie/Code/CSV/Encoded/Couleur_OneHot/: poker_encoded(100).csv  poker_encoded(1000).csv  poker_encoded(10000).csv  poker_encoded_couleurOneHot(100).csv
Poker_Finie/Code/CSV/Encoded/OneHot/: poker_encoded_onehot(100).csv  poker_encoded_onehot(1000).csv  poker_encoded_onehot(10000).csv
Poker_Finie/Code/Data/: Encoding.py  Encoding2.py  TraitementDataset.py  Visualisation.py
Poker_Finie/Code/Modèle/: Gradient_Boosting.py  RandomForest.py
Poker_Finie/Code/Modèle/Classification/: Naive_Bayes.py  RandomForestClassifier.py  Régression_Logistique.py
Poker_Finie/Code/Modèle/Prédiction/: Gradient_Boosting.py  MLP.py  Regression_Lineaire.py
data/processed/encoded_legacy/Couleur_OneHot/: poker_encoded_couleur_onehot_1000.csv  poker_encoded_couleur_onehot_10000.csv
data/processed/encoded_legacy/OneHot/: poker_encoded_onehot_1000.csv  poker_encoded_onehot_10000.csv
src/poker_ml/: __init__.py
src/poker_ml/data/: __init__.py  cleaning.py  encoding.py  generation.py  visualization.py
src/poker_ml/models/: __init__.py  classification.py  regression.py
src/poker_ml/utils/: __init__.py  paths.py
